# ical-rs

./: Cargo.toml  README.md
src/: component.rs  generator.rs  lib.rs  parser.rs  property.rs  serializer.rs  test.rs  test.txt  values.rs
src/constructors/: base.rs  mod.rs  todo.rs
src/objects/: generics.rs  macros.rs  valarm.rs  vevent.rs  vjournal.rs  vtodo.rs
src/values/: address.rs  base.rs  binary.rs  boolean.rs  date.rs  datetime.rs  duration.rs  float.rs  geo.rs  integer.rs  mod.rs  period.rs  recur.rs  string.rs  text.rs  time.rs
