[package]
name = "ical-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.33", features = ["serde"] }
minidom = "0.16.0"
regex = "1.11.1"
reqwest = { version = "0.12.6", features = ["json"] }
strfmt = "0.2.4"
url = "2.5.2"
lazy_static = "1.5.0"
unicode-segmentation = "1.10.1"
chrono-tz = { version = "0.10.0", features = ["serde", "case-insensitive", "arbitrary"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
either = "1.13.0"
multimap = "0.10.0"
paste = "1.0.15"
